# zdifacto

./: CMakeLists.txt
include/zdifacto/: base.h  learner.h  loss.h  node_id.h  predicter.h  sarray.h  store.h  tracker.h  updater.h
src/: learner.cc  main.cc  predicter.cc  updater.cc
src/common/: arg_parser.h  parallel_sort.h  range.h  spmm.h  spmv.h
src/data/: localizer.cc  localizer.h  shared_row_block_container.h
src/loss/: bin_class_metric.h  fm_loss.h  fm_loss_delta.h  logit_loss.h  logit_loss_delta.h  loss.cc
src/predicter/: fm_predicter.cc  fm_predicter.h
src/reader/: bach_reader.cc  batch_reader.h  reader.h
src/sgd/: sgd_learner.cc  sgd_learner.h  sgd_param.h  sgd_updater.cc  sgd_updater.h  sgd_utils.h
src/store/: store.cc  store_local.h
src/tracker/: async_local_tracker.h  local_tracker.h  tracker.cc
